Small spacing and color fixes

--- a/src/sharedComponents/TransactionsTable/transactionsTable.scss
+++ b/src/sharedComponents/TransactionsTable/transactionsTable.scss
@@ -1,7 +1,7 @@
 .transactions-table {
   .table {
     .trim-hash {
-      max-width: 6rem;
+      max-width: 8rem;
 
       @include media-breakpoint-up(lg) {
         max-width: 10rem;
